Juntar mi foto con el fondo

--- a/MiPrimerCurriculo.html
+++ b/MiPrimerCurriculo.html
@@ -17,8 +17,7 @@
     <body>
         <div class="row flex">
             <div class="col-9">
-                <img id="Fondo" src="imagenes\Fondo.jpg">                 
-                <img id="MiFoto" src="imagenes\MaraInicio.png">
+                <img id="Fondo" src="imagenes\FondoMara.png">                 
                 <h1>Edmara Guerrero</h1>
                 <h3>Ingeniero Electrónico en Computación</h3>
             </div>
